--- a/programme/index.html
+++ b/programme/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
     <title>Dian团队26届队长选举</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery-2.2.0.min.js"></script>
     <script src="js/main.js"></script>
 </head>
 <body>
+<script language="JavaScript">
+
+    javascript:window.history.forward(1);
+
+</script>
 <img id="logo-img" src="css/dianlogo.png">
 <div class="tip-box">
 <span id="tips">点击照片选择你心中的队长</span><br>
