--- a/programme/success.html
+++ b/programme/success.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
     <title>Dian团队26届队长选举</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery-2.2.0.min.js"></script>
     <script src="js/main.js"></script>
+    
 </head>
 <body>
+
 <img id="logo-img" src="css/dianlogo.png">
 <div class="success-box">
     <span id="tips-success">投票成功!</span>
