--- a/programme/index.html
+++ b/programme/index.html
@@ -23,7 +23,7 @@
     <img class="left-img-yi" src="css/ziyinoselect.png">
 </div>
 <div class="btn-box">
-    <img class="btn-img" src="css/notoupiaohui.png">
+    <img class="btn-img" src="css/Group1.png">
 </div>
 </body>
 </html>
